--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
 body{background-color: #f7f4e9;}
 
+.imglink{
+  margin-left: 10px;
+  margin-right: 10px;
+  width:50px;
+  height:50px;
+}
+
+.borderimg{
+  width:300px;
+  height:300px;
+}
+
 .myName{
   text-align: center;
-  font-size:40px;
-  font-weight: bold;
+  font-size:100px;
   margin-top: 100px;
-  margin-bottom:0px;
+  margin-bottom:50px;
 }
 
 .links{
@@ -13,7 +24,7 @@ body{background-color: #f7f4e9;}
 }
 
 .intro{
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
 }
 
