--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,46 @@
-body{background-color: #f7f4e9;}
+body {background-color: #c6c6c6;}
+
+div.horizontal{
+  display: flex;
+  justify-content: center;
+}
+
+div.vertical{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.role{
+  font-size: 25px;
+  font-style: bold;
+}
+
+.date{
+  font-size: 15px;
+  color: grey;
+}
+
+.noMargin{
+  margin-bottom: 0px;
+}
+
+.roleAndDate{
+  text-align: center;
+  margin-top: 50%;
+}
+
+.icon{
+  width: 100px;
+  height: 100px;
+}
 
 .imglink{
   margin-left: 10px;
   margin-right: 10px;
   width:50px;
   height:50px;
-}
-
-.borderimg{
-  width:300px;
-  height:300px;
 }
 
 .myName{
@@ -40,14 +71,6 @@ body{background-color: #f7f4e9;}
 }
 
 .companyTitle{
-  font-weight: bold;
+  font-style: bold;
   font-size: 20px;
-}
-
-.jobDescription{
-  margin-bottom: 70px;
-}
-
-.jobRole{
-  font-style: italic;
 }
