--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@ div.vertical{
   text-align: center;
 }
 
+.profile-img{
+  margin-top: 10px;
+  border-radius: 50%;
+  max-width: 65%;
+  height: auto;
+}
+
 .role{
   font-size: 25px;
   font-style: bold;
@@ -47,11 +54,12 @@ div.vertical{
   text-align: center;
   font-size:100px;
   margin-top: 100px;
-  margin-bottom:50px;
+  margin-bottom:15px;
 }
 
 .links{
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .intro{
