--- a/styles.css
+++ b/styles.css
@@ -64,14 +64,16 @@ div.center{
 }
 
 .myName{
+  margin-top: 40px;
   text-align: center;
-  font-size:100px;
-  margin-bottom:15px;
+  font-size:75px;
+
 }
 
 .links{
+  margin-top: 60px;
   text-align: center;
-  margin-bottom: 30px;
+
 }
 
 .intro{
@@ -82,7 +84,7 @@ div.center{
 .generalTitle{
   margin-top: 100px;
   margin-bottom: 25px;
-  text-align: center;
+  margin-left: 5%;
 }
 
 .generalBox{
