--- a/styles.css
+++ b/styles.css
@@ -47,10 +47,27 @@ div.center{
 }
 
 .icon{
+  width: 50px;
+  height: 50px;
+  margin-right: 5px;
+}
+
+.italic{
+  font-style: italic;
+}
+
+.ethersIcon{
+  height: 50px;
+  width: 100%
+  margin-right: 5px;
+}
+
+.lehighcrest{
   width: 100px;
   height: 100px;
   margin-bottom: 5px;
 }
+
 
 .imglink{
   margin-left: 10px;
