--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ div.center{
   margin-bottom: auto;
 }
 
+.petsimg{
+  width: 50%;
+  height: auto;
+}
+
 .profile-img{
   margin-top: 20px;
   border-radius: 50%;
@@ -115,13 +120,6 @@ div.center{
   font-size: 20px;
 }
 
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+#myBtn{
+  margin-bottom: 20px;
 }
