--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
-body {background-color: #c6c6c6;}
+body {
+  background-color: #17202a;
+}
 
-div.horizontal{
+div.horizontal {
   display: flex;
   justify-content: center;
 }
 
-div.vertical{
+div.vertical {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
 }
 
-div.center{
+div.center {
   display: block;
   text-align: center;
   justify-content: center;
@@ -20,106 +22,20 @@ div.center{
   margin-bottom: auto;
 }
 
-.petsimg{
-  width: 50%;
-  height: auto;
+a {
+  color: #3498db;
 }
 
-.profile-img{
-  margin-top: 20px;
-  border-radius: 50%;
-  max-width: 50%;
-  height: auto;
-}
-
-.role{
-  font-size: 25px;
-  font-style: bold;
-}
-
-.date{
-  font-size: 15px;
-  color: grey;
-}
-
-.noMargin{
-  margin-bottom: 0px;
-}
-
-.roleAndDate{
-  text-align: center;
-  margin-top: 50%;
-}
-
-.icon{
-  width: 50px;
-  height: 50px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-}
-
-.italic{
-  font-style: italic;
-}
-
-.ethersIcon{
-  height: 50px;
-  width: 100%;
-  margin-right: 5px;
-}
-
-.lehighcrest{
-  width: 100px;
-  height: 100px;
-  margin-bottom: 5px;
-}
-
-
-.imglink{
-  margin-left: 10px;
-  margin-right: 10px;
-  max-width:50px;
-  height:auto;
-}
-
-.bold{
-  font-weight: bold;
-}
-
-.myName{
+.myName {
   margin-top: 45px;
   text-align: center;
-  font-size:70px;
-
+  font-size: 70px;
+  color: #ecf0f1;
 }
 
-.links{
-  margin-top: 60px;
-  text-align: center;
 
-}
-
-.intro{
+.intro {
   margin-top: 50px;
   text-align: center;
-}
-
-.generalTitle{
-  margin-top: 100px;
-  margin-bottom: 25px;
-  margin-left: 5%;
-}
-
-.generalBox{
-  width: 700px;
-  margin: auto;
-}
-
-.companyTitle{
-  font-style: bold;
-  font-size: 20px;
-}
-
-#myBtn{
-  margin-bottom: 20px;
+  color: #ecf0f1;
 }
